--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
     <title>Alurabooks</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="/styles/header.css">
 </head>
 <body>
     <header class="cabeçalho">
-        <span class="cabeçalho__menu-hamburguer"></span>
-        <img src="img/Logo.svg" alt="Logo do Alurabooks">
-        <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
-        <a href="#"><img src="img/Usuário.svg" alt="Meu usuário"></a>
-        <a href="#"><img src="img/Compras.svg" alt="Minhas compras"></a>
+        <div class="container">
+            <span class="cabeçalho_menu-hamburguer container_imagem" ></span>
+            <img class="container_imagem" src="img/Logo.svg" alt="Logo do Alurabooks">
+        </div>
+        <div class="container">
+            <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="container_imagem"></a>
+            <a href="#"><img src="img/Usuário.svg" alt="Meu usuário" class="container_imagem"></a>
+            <a href="#"><img src="img/Compras.svg" alt="Minhas compras" class="container_imagem"></a>
+        </div>
     </header>
 </body>
 </html>
