--- a/index.html
+++ b/index.html
@@ -72,6 +72,30 @@
             <div class="swiper-button-prev"></div>
             <div class="swiper-button-next"></div> 
         </div>
+
+        <div class="card">
+            <!--1° linha-->
+            <div class="card_descrição">
+                <!--1° Coluna-->
+                <div class="descrição">
+                    <h3 class="descrição_titulo">Talvez você também se interesse por...</h3>
+                    <h2 class="descrição_titulo-livro">Angular 11 e Firebase</h2>
+                    <p class="descrição_texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+                </div>
+                <!--2° Coluna-->
+                <img src="img/Angular.png" class="descrição_imagem">
+            </div>
+            <!--2° Linha-->
+            <div class="card_botões">
+                <!--1° Coluna-->
+                <ul class="botões">
+                    <li class="botões_item"><img src="img/Favoritos.svg" alt="Favoritar livro"></li>
+                    <li class="botões_item"><img src="img/Compras.svg" alt="Adicionar ao carrinho de compras"></li>
+                </ul>
+                <!--2° Coluna-->
+                <a href="#" class="botões_ancora">Saiba mais</a>
+            </div>
+        </div>
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
