--- a/index.html
+++ b/index.html
@@ -98,6 +98,86 @@
         </div>
     </section>
 
+    <section class="mais_vendidos">
+        <h2 class="carrossel_titulo">Mais vendidos</h2>
+        <!-- Slider main container -->
+        <div class="swiper">
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+                    
+
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+                <!-- Slides -->
+                <div class="swiper-slide"><img src="img/ApacheKafka.png" alt="Livro sobre apache kafka e spring boot da alura books"></div>
+                <div class="swiper-slide"><img src="img/Liderança.png" alt="Livro sobre liderança em design da alura books"></div>
+                <div class="swiper-slide"><img src="img/Javascript.png" alt="Livro sobre javascript assertivo da alura books"></div>
+                <div class="swiper-slide"><img src="img/Guia Front-end.png" alt="Livro guia front-end da alura books"></div>
+                <div class="swiper-slide"><img src="img/Portugol.png" alt="Livro sobre portugol da alura books"></div>
+                <div class="swiper-slide"><img src="img/Acessibilidade.png" alt="Livro sobre Acessibilidade web da alura books"></div>
+            </div>
+            
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div> 
+        </div>
+
+        <div class="card">
+            <!--1° linha-->
+            <div class="card_descrição">
+                <!--1° Coluna-->
+                <div class="descrição">
+                    <img src="img/Estrelinhas.png" class="descrição_estrelas" alt="5 estrelas">
+                    <h3 class="descrição_titulo">Autora do mês</h3>
+                    <h2 class="descrição_titulo-livro">Juliana Agarikov</h2>
+                    <p class="descrição_texto">Analista de sistemas e escritora, Juliana é especialista em Front-end.</p>
+                </div>
+                <!--2° Coluna-->
+                <img src="img/Perfil-escritora 1-1.png" class="descrição_imagem">
+            </div>
+            <!--2° Linha-->
+            <div class="card_botões">
+                <!--1° Coluna-->
+                <ul class="botões">
+                    <li class="botões_item"><img src="img/Favoritos.svg" alt="Favoritar livro"></li>
+                    <li class="botões_item"><img src="img/Compras.svg" alt="Adicionar ao carrinho de compras"></li>
+                </ul>
+                <!--2° Coluna-->
+                <a href="#" class="botões_ancora">Saiba mais</a>
+            </div>
+        </div>
+    </section>
+
+    <section class="tópicos">
+        <h2 class="tópicos_titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
+        <ul class="tópicos_lista">
+            <li class="tópicos_item">
+                <a href="#" class="tópicos_link">Android</a>
+            </li>
+            <li class="tópicos_item">
+                <a href="#" class="tópicos_link">Marketing Digital</a>
+            </li>
+            <li class="tópicos_item">
+                <a href="#" class="tópicos_link">Agile</a>
+            </li>
+            <li class="tópicos_item">
+                <a href="#" class="tópicos_link">Startups</a>
+            </li>
+            <li class="tópicos_item">
+                <a href="#" class="tópicos_link">HTML e css</a>
+            </li>
+            <li class="tópicos_item">
+                <a href="#" class="tópicos_link">Python</a>
+            </li>
+            <li class="tópicos_item">
+                <a href="#" class="tópicos_link">GO</a>
+            </li>
+            <li class="tópicos_item">
+                <a href="#" class="tópicos_link">Java</a>
+            </li>
+        </ul>
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script>
         const swiper = new Swiper('.swiper', {
