--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     <img src="img/Estrelinhas.png" class="descrição_estrelas" alt="5 estrelas">
                     <h3 class="descrição_titulo">Autora do mês</h3>
                     <h2 class="descrição_titulo-livro">Juliana Agarikov</h2>
-                    <p class="descrição_texto">Analista de sistemas e escritora, Juliana é especialista em Front-end.</p>
+                    <p class="descrição_texto">Analista de sistemas e escritora, Juliana é especialista em Front-End. </p>
                 </div>
                 <!--2° Coluna-->
                 <img src="img/Perfil-escritora 1-1.png" class="descrição_imagem">
@@ -177,6 +177,18 @@
             </li>
         </ul>
     </section>
+
+    <section class="contato">
+        <h2 class="contato_titulo">Fique por dentro das novidades!</h2>
+        <p class="contato_texto">Atualizações de e-books, novos livros, promoções e outros.</p>
+        <input type="email" placeholder="Cadastre seu e-mail" class="contato_email">
+    </section>
+
+    <hr/>
+
+    <footer class="rodapé">
+        <h2 class="rodapé_titulo">Grupo Alura</h2>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script>
