--- a/index.html
+++ b/index.html
@@ -209,8 +209,10 @@
     </section>
 
     <section class="contato">
-        <h2 class="contato_titulo">Fique por dentro das novidades!</h2>
-        <p class="contato_texto">Atualizações de e-books, novos livros, promoções e outros.</p>
+        <div  class="contato_descrição">
+            <h2 class="contato_titulo">Fique por dentro das novidades!</h2>
+            <p class="contato_texto">Atualizações de e-books, novos livros, promoções e outros.</p>
+        </div>
         <input type="email" placeholder="Cadastre seu e-mail" class="contato_email">
     </section>
 
@@ -218,6 +220,49 @@
 
     <footer class="rodapé">
         <h2 class="rodapé_titulo">Grupo Alura</h2>
+        <ul class="lista-rodape">
+            <li class="lista-rodape-titulo">Educação</li>
+            <li class="lista-rodape-item">
+                <img src="img/CasaDoCodigo.png" alt="Logo da casa do código">
+                <a href="#" class="lista-rodape-link">Casa do código</a>
+            </li>
+            <li class="lista-rodape-item">
+                <img src="img/Caelum.png" alt="Logo da Caelum">
+                <a href="#" class="lista-rodape-link">Caelum</a>
+            </li>
+        </ul>
+
+        <ul class="lista-rodape">
+            <li class="lista-rodape-titulo">Educação online</li>
+            <li class="lista-rodape-item">
+                <img src="img/Alura.png" alt="Logo da Alura">
+                <a href="#" class="lista-rodape-link">Alura</a>
+            </li>
+            <li class="lista-rodape-item">
+                <img src="img/AluraEmpresas.png" alt="Logo da Alura para empresas">
+                <a href="#" class="lista-rodape-link">Alura para empresas</a>
+            </li>
+            <li class="lista-rodape-item">
+                <img src="img/AluraLatam.png" alt="Logo da Alura LATAM">
+                <a href="#" class="lista-rodape-link">Alura LATAM</a>
+            </li>
+            <li class="lista-rodape-item">
+                <img src="img/AluraStart.png" alt="Logo da Alura Start">
+                <a href="#" class="lista-rodape-link">Alura Start</a>
+            </li>
+            <li class="lista-rodape-item">
+                <img src="img/MusicDot.png" alt="Logo da MusicDot">
+                <a href="#" class="lista-rodape-link">MusicDot</a>
+            </li>
+            <li class="lista-rodape-item">
+                <img src="img/AluraLingua.png" alt="Logo da Alura línguas">
+                <a href="#" class="lista-rodape-link">Alura Lingua</a>
+            </li>
+            <li class="lista-rodape-item">
+                <img src="img/PM3.png" alt="Logo da PM3">
+                <a href="#" class="lista-rodape-link">PM3</a>
+            </li>
+        </ul>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
