--- a/index.html
+++ b/index.html
@@ -263,6 +263,38 @@
                 <a href="#" class="lista-rodape-link">PM3</a>
             </li>
         </ul>
+
+        <ul class="lista-rodape">
+            <li class="lista-rodape-titulo">Comunidade</li>
+            <li class="lista-rodape-item">
+                <img src="img/HipstersTech.png" alt="Logo do Hispters Ponto Tech">
+                <a href="#" class="lista-rodape-link">Hispters Ponto Tech</a>
+            </li>
+            <li class="lista-rodape-item">
+                <img src="img/Scuba.png" alt="Logo da Scuba Dev">
+                <a href="#" class="lista-rodape-link">Scuba Dev</a>
+            </li>
+            <li class="lista-rodape-item">
+                <img src="img/Layers.png" alt="Logo da Layers Ponto Tech">
+                <a href="#" class="lista-rodape-link">Layer Ponto Tech</a>
+            </li>
+            <li class="lista-rodape-item">
+                <img src="img/LikeABoss.png" alt="Logo do Like a Boss">
+                <a href="#" class="lista-rodape-link">Like a Boss</a>
+            </li>
+            <li class="lista-rodape-item">
+                <img src="img/CarreiraSemFronteira.png" alt="Logo do Carreira sem fronteiras">
+                <a href="#" class="lista-rodape-link">carreira sem fronteiras</a>
+            </li>
+            <li class="lista-rodape-item">
+                <img src="img/HipstersJobs.png" alt="Logo do Hipsters Jobs">
+                <a href="#" class="lista-rodape-link">Hipsters Ponto Jobs</a>
+            </li>
+            <li class="lista-rodape-item">
+                <img src="img/GUJ.png" alt="Logo do GUJ">
+                <a href="#" class="lista-rodape-link">GUJ</a>
+            </li>
+        </ul>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
