--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="cabeçalho">
         <div class="container">
             <input type="checkbox" id="menu" class="container_botao">
-            <label for="menu">
+            <label for="menu" class="container_rotulo">
                 <span class="cabeçalho_menu-hamburguer container_imagem" ></span>
             </label>
             <ul class="lista-menu">
@@ -43,7 +43,7 @@
 
         <ul class="opções">
             <input type="checkbox" id="opções_menu" class="opções_botão">
-            <label for="opções_menu">
+            <label for="opções_menu" class="opções_rotulo">
                 <li class="opções_item">Categorias</li>
             </label>
             <ul class="lista-menu">
